# leadership-insight-agent

./: Design.md  README.md
backend/: .env.example  .gitignore  LeadershipInsightsAgent-backend.code-workspace  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  ruff.toml  test.py
backend/app/: clients.py  config.py  constants.py
backend/app/agent/: insights_agent.py  tools.py
backend/app/routers/: chat.py  document.py
backend/app/services/: chunkingService.py  documentService.py  embeddingService.py  parsingService.py
frontend/: .gitignore  .prettierignore  LeadershipInsightsAgent-frontend.code-workspace  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  constants.js  index.css  main.jsx
frontend/src/components/: Chat.css  Chat.jsx  ChatInterface.css  ChatInterface.jsx  DocumentUpload.css  DocumentUpload.jsx  DocumentUploadNew.jsx  Upload.css  Upload.jsx
frontend/src/services/: socketManager.js
